kubernetes/demo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node  
spec:
  replicas: 1
  selector:
    matchLabels:
      app: node
  template:
    metadata:
      labels:
        app: node
    spec:
      containers:
      - name: node
        image: omerio/employee-microservice-node:latest
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: node  
spec:
  type: ClusterIP
  ports:
  - port: 8000
  selector:
    app: node
