kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: node
    visualize: "true"
  name: node
spec:
  ports:
    - port: 8000
      targetPort: 8000
  selector:
    name: node
  sessionAffinity: None
  type: ClusterIP
  # type: LoadBalancer
